--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-# Dependencies
-/node_modules
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Build directory
-/.next/
-/out/
+# Next.js
+.next/
+out/
+dist/
+build/
 
-# Other
-/.env.local
+# Firebase
+.firebase/
+functions/.next/
+functions/node_modules/
+functions/dist/
 
-# Backend
-/backend/
+# Cache
+.cache/
+*.log
+*.pack
